<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto_final_gastos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment

        android:id="@+id/nav_registro_gasto"
        android:name="com.example.proyecto_final_gastos.ui.registrogasto.RegistroGastoFragment"
        android:label="@string/menu_registro_gasto"
        tools:layout="@layout/fragment_registrogasto">

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyecto_final_gastos.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyecto_final_gastos.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_detallesMes"
        android:name="com.example.proyecto_final_gastos.ui.detallesmes.DetallesMesFragment"
        android:label="MES"
        tools:layout="@layout/fragment_detalle_mes" />

    <fragment
        android:id="@+id/nav_enero"
        android:name="com.example.proyecto_final_gastos.ui.detallesmes.DetallesMesFragment"
        android:label="@string/menu_enero"
        tools:layout="@layout/fragment_detalle_mes" />

    <fragment
        android:id="@+id/nav_febrero"
        android:name="com.example.proyecto_final_gastos.ui.detallesmes.DetallesMesFragment"
        android:label="@string/menu_febrero"
        tools:layout="@layout/fragment_detalle_mes" />


</navigation>