<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.Inicio_Sesion"
    android:background="@color/fondo">

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="117dp"-->
<!--        android:background="@color/colorAccent"-->
<!--        android:orientation="vertical"/>-->

    <ImageView
        android:layout_weight="1.3"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="@dimen/marginlogo"
        app:srcCompat="@drawable/logo02"/>

    <EditText
        android:id="@+id/txtCorreoLogin"
        android:layout_width="@dimen/widthtext"
        android:layout_height="@dimen/heighttext"
        android:layout_marginHorizontal="@dimen/margintexthorizontal"
        android:layout_marginTop="3dp"
        android:layout_weight=".2"
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/txtPassLogin"
        android:layout_width="@dimen/widthtext"
        android:layout_height="@dimen/heighttext"
        android:layout_marginHorizontal="@dimen/margintexthorizontal"

        android:layout_marginTop="12dp"

        android:layout_weight=".2"
        android:gravity="center"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center" />



    <Button
        android:layout_weight=".2"
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/widthtext"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/margintexthorizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/iniciar_sesion"
        android:textColor="@color/blanco" />

    <TextView
        android:layout_weight=".2"
        android:id="@+id/txtRegistro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/registrarte"
        android:layout_marginTop="102dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/boton_med_txt"
        android:gravity="center_horizontal" />


</LinearLayout>