<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="117dp"-->
<!--        android:background="@color/colorAccent"-->
<!--        android:orientation="vertical"/>-->


    <ImageView
        android:layout_weight="1.3"
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/marginlogo"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/logo02" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="@dimen/widthtext"
        android:layout_height="@dimen/heighttext"
        android:layout_marginHorizontal="@dimen/margintexthorizontal"
        android:layout_marginBottom="@dimen/margintextbot"
        android:layout_weight=".2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombreRegistro"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="@dimen/widthtext"
        android:layout_height="@dimen/heighttext"
        android:layout_marginHorizontal="@dimen/margintexthorizontal"
        android:layout_marginBottom="@dimen/margintextbot"
        android:layout_weight=".2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/correoRegistro"
        android:inputType="textPersonName"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/txtPass"
        android:layout_width="@dimen/widthtext"
        android:layout_height="@dimen/heighttext"
        android:layout_marginHorizontal="@dimen/margintexthorizontal"
        android:layout_weight=".2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passRegistro"
        android:inputType="textPassword"
        android:textAlignment="center" />


    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="@dimen/widthtext"
        android:layout_height="@dimen/heighttext"
        android:layout_marginHorizontal="@dimen/margintexthorizontal"
        android:layout_marginTop="50dp"
        android:layout_weight=".2"
        android:background="@drawable/registrarse"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="102dp"
        android:layout_weight=".2"
        android:gravity="center_horizontal"
        android:text="@string/iniciarSesion"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/boton_med_txt" />


</LinearLayout>