<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment"
    android:background="@color/fondo">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gastos_mes"
        android:textColor="#2B2929"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <TextView
        android:id="@+id/txtNombreGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_placeholder"
        android:textColor="@color/negro"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/fondoGraphWidth"
        android:layout_height="@dimen/fondoGraphHeight"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/graphCategorias"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/mes_abril" />

        <GridView
            android:numColumns="2"
            android:layout_marginLeft="@dimen/margintexthorizontal"
            android:id="@+id/gridCategorias"
            android:layout_width="@dimen/fondoGraphWidth"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtAhorrosMes"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Tus ahorros del mes: $$$$"/>


        <!--        <com.github.mikephil.charting.charts.PieChart-->
        <!--            android:id="@+id/pastel"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1" />-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>